WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21040
Pass NULL instead of the identity matrix to CTFontCreateWithGraphicsFont()
https://bugs.webkit.org/show_bug.cgi?id=21040
Summary
Pass NULL instead of the identity matrix to CTFontCreateWithGraphicsFont()
mitz
Reported
2008-09-23 14:36:50 PDT
This may help the text system speed things up. Patch forthcoming.
Attachments
Patch
(1.26 KB, patch)
2008-09-23 14:38 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2008-09-23 14:38:33 PDT
Created
attachment 23728
[details]
Patch
Dave Hyatt
Comment 2
2008-09-23 14:41:42 PDT
Comment on
attachment 23728
[details]
Patch r=me
mitz
Comment 3
2008-09-23 14:48:18 PDT
<
http://trac.webkit.org/changeset/36815
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug