        Reviewed by Dave Hyatt.

- https://bugs.webkit.org/show_bug.cgi?id=21040
          Pass NULL instead of the identity matrix to CTFontCreateWithGraphicsFont()

        * platform/graphics/mac/SimpleFontDataMac.mm:
        (WebCore::SimpleFontData::getCTFont):



Canonical link: https://commits.webkit.org/29089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36815 268f45cc-cd09-0410-ab3c-d52691b4dbfc